--- a/modules/ept-frontend/client/scss/ept/views/public/_threads.scss
+++ b/modules/ept-frontend/client/scss/ept/views/public/_threads.scss
@@ -104,7 +104,7 @@
 
 .actions-bottom {
   @media screen and (max-width: 1280px) {
-    padding: 0.75rem 1.5rem 0;
+    padding: 0.75rem 1.5rem;
 
     .pagination-bottom {
       bottom: 0;
@@ -113,6 +113,10 @@
     .actions-bottom-grid {
       grid-template-columns: 1fr;
     }
+  }
+
+  @include break-mobile-sm {
+    padding: 0.5rem 1rem;
   }
 }
 
